--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -7,7 +7,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <!--ml-auto margen a la derecha-->>
+                <!--ml-auto margen a la derecha-->
                 <li class="nav-item active">
                     <a class="nav-link" href="/"><i class="fas fa-home"></i> Inicio</a>
                 </li>
